modified DOM to better format calculator with flexbox

--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
         <title>Calculator</title>
     </head>
     <body>
-        
+        <div class="calculator">
+            <div class="display">
+                <div class="numbers">8008135</div>
+            </div>
+            <div class="buttons">
+                <div class ="row">
+                    <div class="operator" id="add">+</div>
+                    <div class="operator" id="subtract">-</div>
+                    <div class="operator" id="multiply">X</div>
+                    <div class="operator" id="divide">/</div>
+                </div>
+                <div class ="row">
+                    <div class="number" id="seven">7</div>
+                    <div class="number" id="eight">8</div>
+                    <div class="number" id="nine">9</div>
+                    <div class="operator" id="clear">AC</div>
+                </div>
+                <div class ="row">
+                    <div class="number" id="four">4</div>
+                    <div class="number" id="five">5</div>
+                    <div class="number" id="six">6</div>
+                    <div class="operator" id="sqroot"></div>
+                </div>
+                <div class ="row">
+                    <div class="number" id="one">1</div>
+                    <div class="number" id="two">2</div>
+                    <div class="number" id="three">3</div>
+                    <div class="number" id="pi">Pi</div>
+                </div>
+                <div class ="row">
+                    <div class="number" id="zero">0</div>
+                    <div class="number" id="decimal">.</div>
+                    <div class="operator" id="backspace"><-</div>
+                    <div class="operator" id="equals">=</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
