--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     </head>
     <body>
         <div class="calculator">
-            <div class="display">
-                <div class="numbers">8008135</div>
-            </div>
-            <div class="buttons">
+            <div id="display">0</div>
+            <div id="buttons">
                 <div class ="row">
                     <div class="operator" id="add">+</div>
                     <div class="operator" id="subtract">-</div>
@@ -28,7 +26,7 @@
                     <div class="number" id="four">4</div>
                     <div class="number" id="five">5</div>
                     <div class="number" id="six">6</div>
-                    <div class="operator" id="sqroot"></div>
+                    <div class="operator" id="sqroot">Sq. Root</div>
                 </div>
                 <div class ="row">
                     <div class="number" id="one">1</div>
@@ -39,8 +37,8 @@
                 <div class ="row">
                     <div class="number" id="zero">0</div>
                     <div class="number" id="decimal">.</div>
-                    <div class="operator" id="backspace"><-</div>
-                    <div class="operator" id="equals">=</div>
+                    <div class="operator" id="backspace">DEL</div>
+                    <div class="equals" id="equals">=</div>
                 </div>
             </div>
         </div>
