--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div class="calculator">
-            <div id="display">0</div>
+            <div id="display"></div>
+                <div id="digits"></div>
             <div id="buttons">
                 <div class ="row">
                     <div class="operator" id="add">+</div>
@@ -20,13 +21,13 @@
                     <div class="number" id="seven">7</div>
                     <div class="number" id="eight">8</div>
                     <div class="number" id="nine">9</div>
-                    <div class="operator" id="clear">AC</div>
+                    <div class="function" id="clear">AC</div>
                 </div>
                 <div class ="row">
                     <div class="number" id="four">4</div>
                     <div class="number" id="five">5</div>
                     <div class="number" id="six">6</div>
-                    <div class="operator" id="sqroot">Sq. Root</div>
+                    <div class="operator" id="exponent">Exp.</div>
                 </div>
                 <div class ="row">
                     <div class="number" id="one">1</div>
@@ -37,7 +38,7 @@
                 <div class ="row">
                     <div class="number" id="zero">0</div>
                     <div class="number" id="decimal">.</div>
-                    <div class="operator" id="backspace">DEL</div>
+                    <div class="function" id="backspace">DEL</div>
                     <div class="equals" id="equals">=</div>
                 </div>
             </div>
