final code fulfilling all requirements except extra credit  keyboard input

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <title>Calculator</title>
     </head>
     <body>
-        <div class="calculator">
-            <div id="display"></div>
-                <div id="digits"></div>
-            <div id="buttons">
+        <div id="calculator">
+            <div id="digits"></div>
                 <div class ="row">
                     <div class="operator" id="add">+</div>
                     <div class="operator" id="subtract">-</div>
@@ -33,7 +31,7 @@
                     <div class="number" id="one">1</div>
                     <div class="number" id="two">2</div>
                     <div class="number" id="three">3</div>
-                    <div class="number" id="pi">Pi</div>
+                    <div class="number" id="pi">&#120645;</div>
                 </div>
                 <div class ="row">
                     <div class="number" id="zero">0</div>
@@ -41,7 +39,6 @@
                     <div class="function" id="delete">DELETE</div>
                     <div class="equals" id="equals">=</div>
                 </div>
-            </div>
         </div>
     </body>
 </html>
